fix spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,7 +37,7 @@ h3{ font-size:.95rem; color:#333333; margin-top:0.3rem; }
   width:621px;
   height:621px;
   margin:0.5rem auto 2rem auto;
-  top: -10px;
+  top: -30px;
 }
 
 /* Center image */
@@ -171,6 +171,7 @@ footer{
   .center-image{ width:173px; height:173px; }
   .orbit-image{ width:107px; height:107px; }
   body{ justify-content:center; padding-bottom: 70px; }
+  header{margin-bottom: 1.5rem; margin-top: 0;}
   main{ padding-bottom:70px; }
   footer { height: 70px; }
 }
